# terra

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/app_creation/: CMakeLists.txt  main.c
examples/quad/: CMakeLists.txt  main.c
examples/raw_vulkan/: CMakeLists.txt  init.c  init.h  main.c
examples/shapes/: CMakeLists.txt  main.c
examples/teapot/: CMakeLists.txt  main.c
examples/teapot/glsl/: teapot.vert
examples/triangle/: CMakeLists.txt  main.c
examples/triangle/glsl/: triangle.frag  triangle.vert
examples/window/: CMakeLists.txt  main.c
include/terra/: app.h  material.h  mesh.h  setup.h  status.h  terra.h  vertex3.h
include/terra/buffers/: buffer.h  buffers.h  ib.h  ibo.h  ubo.h  vb.h  vbo.h  vertex.h
include/terra/data/: data.h  vector.h  vertex2.h  vertex3.h
include/terra/vk/: command_pool.h  descriptor_set.h  devices.h  framebuffer.h  name_mappings.h  pipeline.h  shader.h  swapchain.h  sync.h  vk.h
include/terrar/: app.h  defaults.h  setup.h  terrar.h
include/terrar/vk/: devices.h  name_mappings.h  pipeline.h  swapchain.h
include/terrau/: binfile.h  files.h  log.h  macros.h  math.h  mem.h  name_mappings.h
include/terrau/files/: descriptors.h
include/terrau/formats/: descriptors.h  obj.h  off.h
include/terrau/math/: clamp.h
resources/off/utah_teapot/: teapot.off  teapot_hd.off
resources/tests/: test_files.txt
src/: CMakeLists.txt
src/terra/: CMakeLists.txt
src/terra_core/: CMakeLists.txt  app.c  app_debug.c  mesh.c  mesh_files.c  setup.c  vertex3.c
src/terra_core/buffers/: buffer.c  ib.c  ibo.c  ubo.c  vb.c  vbo.c  vertex.c
src/terra_core/data/: vector.c  vertex2.c  vertex3.c
src/terra_core/vk/: _pipeline.c  _pipeline.h  _swapchain.c  _swapchain.h  command_pool.c  descriptor_set.c  devices.c  framebuffer.c  mesh.c  name_mappings.c  pipeline.c  shader.c  swapchain.c  sync.c
src/terra_render/: CMakeLists.txt  app.c  defaults.c  setup.c  vk_setup.c  vk_setup.h
src/terra_render/vk/: _swapchain.c  _swapchain.h  devices.c  name_mappings.c  pipeline.c  swapchain.c
src/terra_utils/: CMakeLists.txt  binfile.c  files.c  macros.h  mem.c  name_mappings.c  test.h
src/terra_utils/files/: obj.c
src/terra_utils/formats/: obj.c  off.c
src/terra_utils/math/: clamp.c
src/terra_vma/: CMakeLists.txt
sys/: build.sh  clean.sh  test.sh
tests/unittest/quick/: test_files.c  test_vector.c
tools/: gen_todo.sh
