file(GLOB EXAMPLE_ROOT_SOURCE *.c)
file(GLOB EXAMPLE_ROOT_HEADER *.h)
file(GLOB EXAMPLE_GLSL_VERT glsl/*.vert)
file(GLOB EXAMPLE_GLSL_FRAG glsl/*.frag)

set(EXAMPLE_NAME ex.quad)

add_executable(${EXAMPLE_NAME} ${EXAMPLE_ROOT_HEADER} ${EXAMPLE_ROOT_SOURCE})

target_link_libraries(
  ${EXAMPLE_NAME} PUBLIC ${PROJECT_CORE_NAME} ${PROJECT_UTILS_NAME} glfw
                         ${Vulkan_LIBRARIES})
target_include_directories(
  ${EXAMPLE_NAME}
  PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR} ${PROJECT_HEADERS}
         ${CMAKE_SOURCE_DIR} ${CMAKE_DEPENDENCIES_DIR}/GLFW/include
         ${Vulkan_INCLUDE_DIRS})

set_target_properties(
  ${EXAMPLE_NAME}
  PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG
             ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG}/${EXAMPLE_NAME}
             RUNTIME_OUTPUT_DIRECTORY_RELEASE
             ${CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE}/${EXAMPLE_NAME})

compile_shader(
  ${EXAMPLE_NAME}
  ENV
  vulkan1.3
  FORMAT
  bin
  SOURCES
  ${EXAMPLE_GLSL_VERT}
  ${EXAMPLE_GLSL_FRAG})
