file(GLOB UTILS_ROOT_SOURCE *.c)
file(GLOB UTILS_ROOT_HEADER *.h)
file(GLOB UTILS_FORMATS_SOURCE formats/*.c)
file(GLOB UTILS_FORMATS_HEADER formats/*.h)
file(GLOB UTILS_MATH_SOURCE math/*.c)
file(GLOB UTILS_MATH_HEADER math/*.h)
file(GLOB UTILS_VENDOR_SOURCE vendor/*.c)
file(GLOB UTILS_VENDOR_HEADER vendor/*.h)

add_library(
  ${PROJECT_UTILS_NAME}
  ${UTILS_ROOT_HEADER} ${UTILS_ROOT_SOURCE} ${UTILS_FORMATS_HEADER} ${UTILS_FORMATS_SOURCE} ${UTILS_VENDOR_HEADER}
  ${UTILS_VENDOR_SOURCE} ${UTILS_MATH_HEADER} ${UTILS_MATH_SOURCE})
target_link_libraries(${PROJECT_UTILS_NAME} PUBLIC ${PROJECT_CORE_NAME})
target_include_directories(
  ${PROJECT_UTILS_NAME}
  PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}
         ${PROJECT_SOURCE_DIR_LOCATION} ${PROJECT_HEADERS} ${CMAKE_SOURCE_DIR})
target_compile_options(${PROJECT_UTILS_NAME} PRIVATE ${PROJECT_COMPILE_OPTIONS})
